--- a/ChessEngine/ChessEngine.csproj
+++ b/ChessEngine/ChessEngine.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BishopMovement.cs" />
-    <Compile Include="ChessPiece.cs" />
+    <Compile Include="Piece.cs" />
     <Compile Include="ChessGame.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="InvalidMoveException.cs" />
